# honeycomb

./: CMakeLists.txt
src/: main.cpp
src/hc/: main.hc
src/hc/grammar/: grammar.bnf
src/lexer/: Lexer.cpp  Lexer.hpp
src/parser/: Grammar.hpp  Parser.cpp  Parser.hpp
src/parser/ast/: ASTNode.hpp
src/token/: Token.hpp
